# henley

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  notes  pyproject.toml
docs/: api-reference.md  comet-0402-migration.md  fusion-notes.md
src/henley/: __init__.py  __main__.py  alternates.py  auth.py  cli.py  client.py  config.py  fusion.py  scr.py
tests/: test_alternates.py  test_auth.py  test_fusion.py  test_scr.py
